src/log/build_2022-08-01_23-03-40/package_python/stderr.log
  File "/home/diego/Workspaces/ros2_control_diffbot_ws/src/install/package_python/lib/python3.8/site-packages/package_python/py_pub_spiral.py", line 38
    self.i += float(data)f
                         ^
SyntaxError: invalid syntax

